--- a/blocks/place/place__title/place__title.css
+++ b/blocks/place/place__title/place__title.css
@@ -6,7 +6,7 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 1.1;
-    color: #fff
+    color: #fff;
 }
 
 /* стили для планшета */
