--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,11 +3,11 @@
     padding: 0;
     text-align: center;
     color: #fff;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
-    line-height: 1;
+    line-height: 1.1;
 }
 
 /* стили для планшета */
@@ -20,6 +20,6 @@
 /* стили для малого смартфона */
 @media screen and (max-width: 320px) {
     .lead__title {
-        font-size: 44px;
+        font-size: 40px;
     }
 }
