--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -19,7 +19,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: black;
+    background: #2A2C2F;
     width: 100%;
     height: 100%;
     z-index: -1;
