--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle {
-    margin: 0;
+    margin: 32px 0 0 0;
     padding: 0;
     max-width: 360px;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -21,5 +21,6 @@
 @media screen and (max-width: 320px) {
     .cover__subtitle {
         font-size: 14px;
+        margin: 16px 0 0 0;
     }
 }
