--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,7 @@
 .footer__link {
     margin: 0 18px 0 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -19,7 +19,7 @@
 /* стили для планшета */
 @media screen and (max-width: 768px) {
     .footer__link {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
