--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,8 @@
 .header__lang-link {
-    margin: 0 18px 0 0;
+    margin: 0;
     padding: 0;
     color: #fff;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -11,12 +11,14 @@
     opacity: 1;
     transition: opacity 0.2s linear;
 }
-
-.header__lang-link:last-of-type {
-    margin: 0;
-}
-
 .header__lang-link:hover {
     opacity: 0.8;
     text-decoration: underline;
+}
+/* стили для среднего смартфона */
+@media screen and (max-width: 375px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 1.1;
+    }
 }
