--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,9 +7,15 @@
 }
 
 /* стили для малого смартфона */
+@media screen and (max-width: 768px) {
+    .header {
+        margin: 28px 24px 48px 24px;
+    }
+}
+
+/* стили для малого смартфона */
 @media screen and (max-width: 550px) {
     .header {
         margin: 16px 16px 48px 16px;
-        padding: 0;
     }
 }
