--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,9 +1,9 @@
 .intro__list-item {
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 12px;
-    line-height: 18px;
+    line-height: 1.5;
 }
