--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,7 +2,7 @@
     margin: 40px 0 33px 0;
     padding: 0;
     max-width: 690px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -15,9 +15,6 @@
         max-width: 720px;
     }
 }
-
-/* стили для планшета */
-@media screen and (max-width: 768px) {}
 
 /* стили для малого смартфона */
 @media screen and (max-width: 320px) {
