--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     max-width: 690px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
@@ -21,6 +21,5 @@
     .intro__title {
         max-width: 288px;
         font-size: 32px;
-        line-height: 1.1;
     }
 }
