--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -19,7 +19,7 @@
 /* стили для малого смартфона */
 @media screen and (max-width: 550px) {
     .place__title {
-        font-size: 35px;
+        font-size: 32px;
         margin: 0 16px 0 16px;
     }
 }
