--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,27 +1,4 @@
 .footer {
-    margin: 0 48px 24px 48px;
+    margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-/* стили для планшета */
-@media screen and (max-width: 850px) {
-    .footer {
-        margin: 0 24px 24px 24px;
-    }
-}
-
-@media screen and (max-width: 710px) {
-    .footer {
-        flex-direction: column;
-    }
-}
-
-/* стили для малого смартфона */
-@media screen and (max-width: 320px) {
-    .footer {
-        margin: 0 16px 24px 16px;
-    }
 }
