--- a/blocks/header/__languages/header__languages.css
+++ b/blocks/header/__languages/header__languages.css
@@ -1,7 +1,8 @@
 .header__languages {
-    margin: 0;
+    margin: 0 0 6px 0;
     padding: 0;
     display: flex;
     list-style-type: none;
     gap: 18px;
+    align-items: center;
 }
