--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,5 @@
 .place__url-heading {
-    margin: 0 0 12 0;
+    margin: 0 0 12px 0;
     padding: 0;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
